Implemented Gantt charts for 2021

--- a/csirt.divd.nl/_cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00001.md
@@ -33,6 +33,43 @@ recommendation: "
 	Install the available patches immediately and use the published IOC's to determine if your systems have been compromised.
 "
 -workaround:		
+start:  2021-03-03
+end:    2021-05-15
+timeline:
+- start: 2021-01-06
+  end:
+  event: Volexity detected anomalous activity on two of its customers' Microsoft Exchange Servers
+- start: 2021-03-02
+  end:
+  event: Microsoft releases security blog and patches
+- start: 2021-03-02
+  end:
+  event: Volexity publishes Blog
+- start: 2021-03-03
+  end:
+  event: Researchers or DIVD scan 'Dutch' Exchange server for these vulnerabilities
+- start: 2021-03-03
+  end:
+  event: Start scan remaining IPv4 space
+- start: 2021-03-04
+  end:
+  event: '"Dutch" list sent to NBIP for further notification'
+- start: 2021-03-04
+  end:
+  event: Scan remaining IPv4 space, done
+- start: 2021-03-07
+  end:
+  event: 42k+ messsages sent via email
+- start: 2021-03-09
+  end:
+  event: Rescan and notifications of all previously scanned servers
+- start: 2021-03-16
+  end:
+  event: Rescan and notifications of all previously scanned servers, including a script that actually tests for CVE-2021-26855
+- start: 2021-05-15
+  end:
+  event: Case closed for DIVD CSIRT. Case has been handed over to research. See [blogpost](/2021/05/14/Closing-ProxyLogon-case)
+
 ips: 42193
 ---
 <p>
@@ -95,21 +132,7 @@ HuntressLabs indicates that this vulnerability is actively being exploited and r
 DIVD security researchers scan the internet for vulnerable systems, initially focussing on systems within The Netherlands. Scanning is done with the [NMAP Script from Kevin Beaumont](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange.nse).
 Based on these scan results we try to notify administrators of vulnerable systems.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 06-01-2021 | Volexity detected anomalous activity on two of its customers' Microsoft Exchange Servers |
-| 02-03-2021 | Microsoft releases security blog and patches |
-| 02-03-2021 | Volexity publishes Blog |
-| 03-03-2021 | Researchers or DIVD scan "Dutch" Exchange server for these vulnerabilities |
-| 03-03-2021 | Start scan remaining IPv4 space |
-| 04-03-2021 | "Dutch" list sent to NBIP for further notification |
-| 04-03-2021 | Scan remaining IPv4 space, done |
-| 07-03-2021 | 42k+ messsages sent via email |
-| 09-03-2021 | Rescan and notifications of all previously scanned servers |
-| 16-03-2021 | Rescan and notifications of all previously scanned servers, including a script that actually tests for {% cve CVE-2021-26855 %} |
-| 15-5-2021  | Case closed for DIVD CSIRT. Case has been handed over tot research. See [blogpost](/2021/05/14/Closing-ProxyLogon-case/)
+{% include timeline.html %}
 
 
 ## More information
