--- a/csirt.divd.nl/_cases/DIVD-2021-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00002.md
@@ -28,6 +28,19 @@ Disable the on-premise Kaseya VSA servers immediately.
 "
 -patch_status: N/A
 -workaround: Available
+start:   2021-04-01
+end:
+timeline:
+- start: 2021-07-02
+  end:
+  event: Kaseya publishes their advisory
+- start: 2021-07-02
+  end:
+  event: DIVD start scanning to identify exposed Kaseya VSA servers
+- start: 2021-07-03
+  end:
+  event: DIVD has sent out notifications to the listed abuse addresses of all exposed Kaseya VSA servers found online
+
 ips: 2298
 ---
 ## Summary
@@ -46,14 +59,7 @@ The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to
 
 We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw/environment’ and ‘/install/kaseyalatestversion.xml’ and matching patterns in these files.
 
-
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 02-07-2021 | Kaseya publishes their advisory |
-| 02-07-2021 | DIVD start scanning to identify exposed Kaseya VSA servers |
-| 03-07-2021 | DIVD has sent out notifications to the listed abuse addresses of all exposed Kaseya VSA servers found online |
+{% include timeline.html %}
 
 ## More information
 * [official  advisory](https://helpdesk.kaseya.com/hc/en-gb/articles/4403440684689-Important-Notice-July-2nd-2021) from Kaseya
