--- a/csirt.divd.nl/_cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00004.md
@@ -33,6 +33,28 @@ If you have been notified that your email address(es) and password(s) are on the
 "
 -patch_status:	 	Available
 -workaround:
+start: 2021-05-07
+end:   2021-05-10
+timeline:
+- start: 2021-03-22
+  end:
+  event: Phishing campaign is active
+- start: 2021-04-09
+  end:
+  event: Researcher reports the campaign and data to DIVD
+- start: 2021-05-07
+  end:
+  event: DIVD starts a case and processes the data
+- start: 2021-05-09
+  end:
+  event: First notifications sent
+- start: 2021-05-10
+  end:
+  event: All notifications have been sent
+- start: 2021-05-10
+  end:
+  event: Case closed
+
 ips: 0		
 ---
 <p>
@@ -72,6 +94,8 @@ Wij gaan, in de komende dagen,  aan ieder van de email adressen op de lijst een 
 | 10-05-2021 | Alle notificaties zijn verstuurd |
 | 10-05-2021 | Case gesloten |
 
+{% include timeline_gantt.html %}
+
 <hr>
 
 
@@ -98,13 +122,5 @@ If you have questions about this case or need help, you can reach us on this ema
 
 We have received the list of email addresses and passwords. Each email address on the list will get an email over the next days to notify them of the breach.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 22-03-2021 | Phishing campaign is active |
-| 09-04-2021 | Researcher reports the campaign and data to DIVD |
-| 07-05-2021 | DIVD starts a case and processes the data |
-| 09-05-2021 | First notifications sent |
-| 10-05-2021 | All notifications have been sent |
-| 10-05-2021 | Case closed |
+{% include timeline.html %}
