--- a/csirt.divd.nl/_cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00006.md
@@ -24,6 +24,43 @@ recommendation: "
 "
 patch_status: Full patched
 -workaround: N/A
+start: 2021-04-30
+end:   
+timeline:
+- start: 2021-04-30
+  end:
+  event: Vendor contacted and informed. 
+- start: 2021-04-30
+  end:
+  event: Scanning internet-facing implementations. 
+- start: 2021-04-30
+  end:
+  event: Start of the identification of possible victims (with internet-facing systems). 
+- start: 2021-05-03
+  end:
+  event: Contacted vendor if email was received. Resend information to vendor. 
+- start: 2021-05-10
+  end:
+  event: Vendor responds that they are working on it.
+- start: 2021-05-24
+  end:
+  event: Requested an update.
+- start: 2021-04-30
+  end:   2021-06-01
+  event: Time to fix
+- start: 2021-06-01
+  end:
+  event: Vendor issues patch(es). 
+- start: 2021-04-30
+  end:   2021-11-16
+  event: Time to disclose
+- start: 2021-11-16
+  end:
+  event: First version of this case file. 
+- start: 2021-12-02
+  end:
+  event: First notifications sent out. 
+
 ips: 0
 ---
 ## Summary
@@ -41,19 +78,8 @@ If you are running a version of SmarterMail before 100.0.7803 (May 13, 2021) or 
 ## What we are doing
 We are processing the list of vulnerable SmarterMail servers.
 
-## Timeline
 
-| Date | Description |
-|:-------------:|-----|
-| 30 Apr 2021 | Vendor contacted and informed. |
-| 30 Apr 2021 | Scanning internet-facing implementations. |
-| 30 Apr 2021 | Start of the identification of possible victims (with internet-facing systems). |
-| 03 May 2021 | Contacted vendor if email was received. Resend information to vendor. |
-| 10 May 2021 | Vendor responds that they are working on it.|
-| 24 May 2021 | Requested an update.|
-| 01 Jun 2021 | Vendor issues patch(es). |
-| 16 Nov 2021 | First version of this case file. |
-| 02 Dec 2021 | First notifications sent out. |
+{% include timeline.html %}
 
 ## More information
 * [official  release notes](https://www.smartertools.com/smartermail/release-notes/current) from SmarterMail
