--- a/csirt.divd.nl/_cases/DIVD-2021-00010.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00010.md
@@ -27,6 +27,24 @@ The solution for this vulnerability is to upgrade VMware vCenter Server software
 "
 -patch_status:	 	Available
 -workaround:		Available
+start:  2021-05-30
+end:    2021-11-30
+timeline:
+- start: 2021-05-25
+  end:
+  event: VMWare publishes an advisory.
+- start: 2021-05-31
+  end:
+  event: DIVD starts scanning.
+- start: 2021-06-03
+  end:
+  event: Exploit code published online.
+- start: 2021-06-06
+  end:
+  event: Notifications sent by DIVD CSIRT.
+- start: 2021-11-30
+  end:
+  event: Case closed as the amount of vulnerable systems online has decreased significantly.
 ips: 6831
 ---
 
@@ -49,17 +67,11 @@ DIVD sends notifications about the vCenter vulnerability to system owners, for w
 - Inspect build version (patched builds are: 17958471, 18010531, 17994927)
 - Check availability of API endpoint indicating possibility to exploit
 
-## Timeline
 
-| Date | Description |
-|:-----:|-------------|
-| 25-05-2021 | VMWare publishes an advisory. |
-| 31-05-2021 | DIVD starts scanning. |
-| 03-06-2021 | Exploit code published online. |
-| 06-06-2021 | Notifications sent by DIVD CSIRT. |
-| 30-11-2021 | Case closed as the amount of vulnerable systems online has decreased significantly. |
+{% include timeline.html %}
 
 ## References
-[0] https://www.vmware.com/security/advisories/VMSA-2021-0010.html
-[1] https://kb.vmware.com/s/article/83829
-[2] https://www.divd.nl/
+
+- [0] [https://www.vmware.com/security/advisories/VMSA-2021-0010.html](https://www.vmware.com/security/advisories/VMSA-2021-0010.html)
+- [1] [https://kb.vmware.com/s/article/83829](https://kb.vmware.com/s/article/83829)
+- [2] [https://www.divd.nl/](https://www.divd.nl/)
