--- a/csirt.divd.nl/_cases/DIVD-2021-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00011.md
@@ -34,6 +34,51 @@ All on-premises VSA Servers should continue to remain offline until further inst
 "
 -patch_status: N/A
 -workaround: N/A
+start: 2021-04-01
+end:   2021-07-07
+timeline:
+- start:  2021-04-01 
+  end: 
+  event: Research start
+- start:  2021-04-02 
+  end: 
+  event: DIVD starts scanning internet-facing implementations.
+- start:  2021-04-04 
+  end: 
+  event: Start of the identification of possible victims (with internet-facing systems).
+- start:  2021-04-06 
+  end: 
+  event: Kaseya informed.
+- start: 2021-04-06
+  end:   2021-05-08
+  event: Time to fix CVE-2021-30118
+- start:  2021-04-10 
+  end: 
+  event: Vendor starts issuing  [patches v9.5.5](https://helpdesk.kaseya.com/hc/en-gb/articles/360019054377-9-5-5-Feature-Release-10-April-2021). Resolving CVE-2021-30118.
+- start: 2021-04-06
+  end:   2021-05-08
+  event: Time to fix CVE-2021-30117 and CVE-2021-30121
+- start:  2021-05-08 
+  end: 
+  event: Vendor issues another [patch v9.5.6](https://helpdesk.kaseya.com/hc/en-gb/articles/360019966738-9-5-6-Feature-Release-8-May-2021). Resolving CVE-2021-30117, CVE-2021-30121, CVE-2021-30201.
+- start: 2021-06-04
+  end:
+  event: DIVD CSIRT hands over a list of identified Kaseya VSA hosts to Kaseya.
+- start: 2021-04-06
+  end:   2021-06-26
+  event: Time to fix CVE-2021-30119
+- start: 2021-06-26
+  end:
+  event: Kaseya released [9.5.7 on SaaS](https://helpdesk.kaseya.com/hc/en-gb/articles/4403021283217-9-5-7-Feature-Release-26-June-2021-) Resolving CVE-2021-30116 and CVE-2021-30119.
+- start: 2021-07-02
+  end:
+  event: DIVD responds to the ransomware, by scanning for Kaseya VSA instances reachable via the Internet and sends out notifications to network owners
+- start: 2021-04-06
+  end:   2021-07-07
+  event: Time to disclosure
+- start: 2021-07-07
+  end:
+  event: Limited publication (after 3 months).
 ips: 0
 ---
 ## Summary
@@ -67,20 +112,7 @@ We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw
 
 In the past few days we have been working with Kaseya to make sure customers turn off their systems, by tipping them off about customers that still have systems online, and hope to be able to continue to work together to ensure that their patch is installed everywhere.
 
-## Timeline
-
-| Date | Description |
-|:-------------:|-----|
-| 01 Apr 2021 | Research start |
-| 02 Apr 2021 | DIVD starts scanning internet-facing implementations. |
-| 04 Apr 2021 | Start of the identification of possible victims (with internet-facing systems). |
-| 06 Apr 2021 | Kaseya informed. |
-| 10 Apr 2021 | Vendor starts issuing  [patches v9.5.5](https://helpdesk.kaseya.com/hc/en-gb/articles/360019054377-9-5-5-Feature-Release-10-April-2021). Resolving CVE-2021-30118. |
-| 8 May 2021 | Vendor issues another [patch v9.5.6](https://helpdesk.kaseya.com/hc/en-gb/articles/360019966738-9-5-6-Feature-Release-8-May-2021). Resolving CVE-2021-30117, CVE-2021-30121, CVE-2021-30201. |
-| 04 Jun 2021 | DIVD CSIRT hands over a list of identified Kaseya VSA hosts to Kaseya. |
-| 26 Jun 2021 |  [9.5.7 on SaaS](https://helpdesk.kaseya.com/hc/en-gb/articles/4403021283217-9-5-7-Feature-Release-26-June-2021-) Resolving CVE-2021-30116 and CVE-2021-30119. |
-| 02 Jul 2021 | DIVD responds to the ransomware, by scanning for Kaseya VSA instances reachable via the Internet and sends out notifications to network owners |
-| 07 Jul 2021 | Limited publication (after 3 months). |
+{% include timeline.html %}
 
 ## More information
 * [official  advisory](https://helpdesk.kaseya.com/hc/en-gb/articles/4403440684689-Important-Notice-July-2nd-2021) from Kaseya
