--- a/csirt.divd.nl/_cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00012.md
@@ -22,6 +22,33 @@ Change your passwords, check if credentials have been abused, check your compute
 "
 -patch_status:	 	n/a
 -workaround:		Available
+start:  2021-05-20
+end:    2021-06-04
+timeline:
+- start: 2021-05-01
+  end: 2021-05-15
+  event: Assumed approximate period the botnet was active.
+- start: 2021-05-20 
+  end:
+  event: DIVD Researcher finds the open database.
+- start: 2021-05-24 
+  end:
+  event: Hosting provider notified of this database on their infrastructure.
+- start: 2021-05-26 
+  end:
+  event: Database taken offline by hosting provider.
+- start: 2021-05-26 
+  end:
+  event: Data shared with Scatteredsecrets.
+- start: 2021-05-27 
+  end:
+  event: A copy of the database was shared with the Dutch police
+- start: 2021-06-02   
+  end:
+  event: DIVD CSIRT has started to send notification emails to victims
+- start: 2021-06-04
+  end:
+  event: Case closed
 ips: 0
 ---
 <p>
@@ -75,6 +102,7 @@ De komende dagen sturen wij e-mails om slachtoffers te waarschuwen. Als er meerd
 | 27-05-2021 | Kopie van de database gedeeld met de Nederlandse politie |
 | 2-6-2021   | DIVD CSIRT stuur notificaties uit naar de slachtoffers |
 
+{% include timeline_gantt.html %}
 
 <hr>
 
@@ -115,14 +143,5 @@ We have provided a copy of the database to the Dutch police.
 
 We are notifying the victims via email; if multiple of your email addresses have been found in the database, you will get multiple emails.
 
-## Timeline
 
-| Date | Description |
-|:-----:|-------------|
-| early 05-2021 | Assumed period the botnet was active. |
-| 20-05-2021 | DIVD Researcher finds the open database. |
-| 24-05-2021 | Hosting provider notified of this database on their infrastructure. |
-| 26-05-2021 | Database taken offline by hosting provider. |
-| 26-05-2021 | Data shared with Scatteredsecrets. |
-| 27-05-2021 | A copy of the database was shared with the Dutch police |
-| 2-6-2021   | DIVD CSIRT has started to send notification emails to victims |
+{% include timeline.html %}
