--- a/csirt.divd.nl/_cases/DIVD-2021-00014.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00014.md
@@ -26,6 +26,33 @@ workaround:		Workaround available for the client, in Kaseya knowledge base
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
+start: 2021-07-02
+end:
+timeline:
+- start: 2021-07-02
+  end:
+  event: Vulnerabilities discovered.
+- start: 2021-07-03
+  end:
+  event: Vendor informed.
+- start: 2021-07-03
+  end:   2021-08-12
+  event: Vendor works on server patch
+- start: 2021-07-03
+  end:   open
+  event: Vendor works on client patch
+- start: 2021-07-14
+  end:
+  event: Scanning internet-facing implementations.
+- start: 2021-07-15
+  end:
+  event: Start of the identification of possible vulnerable internet-facing systems.
+- start: 2021-08-12
+  end:
+  event: Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities
+- start: 2021-09-06
+  end:
+  event: Added official CVE numbers to this case and site
 ips: 0
 ---
 
@@ -48,13 +75,6 @@ The client side vulnerability can current only be mitigated with firewall rules.
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to detect vulnerable Kaseya Unitrends servers and notify the owners directly or via the known abuse channels, Gov-CERTs and CSIRTs, and other trusted channels.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 02 Jul 2021 | Vulnerabilities discovered. |
-| 03 Jul 2021 | Vendor informed. |
-| 14 Jul 2021 | Scanning internet-facing implementations. |
-| 15 Jul 2021 | Start of the identification of possible vulnerable internet-facing systems. |
-| 12 Aug 2021 | Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities |
-| 06 Sep 2021 | Added official CVE numbers to this case and site |
+{% include timeline.html %}
+
