--- a/csirt.divd.nl/_cases/DIVD-2021-00015.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00015.md
@@ -21,6 +21,15 @@ Change your passwords, check if credentials have been abused, check your compute
 "
 -patch_status:	 	n/a
 -workaround:		Available
+start:  2021-06-10
+end:
+timeline:
+- start: 2021-06-10
+  end:
+  event: DIVD Researcher finds the stolen credentials.
+- start: 2021-06-12
+  end:
+  event: DIVD starts processing this data and starts with the victim notification process.
 ips: 0
 ---
 ## Summary
@@ -52,9 +61,5 @@ These two projects keep track of databases with stolen and leaked credentials an
 
 The database we discovered contained millions of username-password combinations. We are processing the data. After this, we start notifying the people and organizations which are affected by this data leak.
 
-## Timeline
 
-| Date | Description |
-|:-----:|-------------|
-| 10-06-2021 | DIVD Researcher finds the stolen credentials. |
-| 12-06-2021 | DIVD starts processing this data and starts with the victim notification process. |
+{% include timeline.html %}
