--- a/csirt.divd.nl/_cases/DIVD-2021-00017.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00017.md
@@ -18,6 +18,30 @@ versions:
   - < 2021.1 HF6 (build 2021.1.6.731)
 recommendation: "Update SolarWinds N-able N-central to the latest version."
 patch_status: "Multi-tenant vulnerabilities are patched in 2021.1 HF6"
+start: 2021-07-05
+end: 2021-09-24
+timeline:
+- start: 2021-07-05
+  end:
+  event: Vulnerabilities discovered.
+- start: 2021-07-12
+  end:
+  event: Vendor informed.
+- start: 2021-07-12
+  end:   2021-07-14
+  event: Vendor confirms vulnerability.
+- start: 2021-07-14
+  end:   2021-08-27
+  event: Vendor works on patch
+- start: 2021-08-27
+  end:
+  event: 2021.1 HF6 released.
+- start: 2021-09-24
+  end:
+  event: Vendor notified DIVD about the fix.
+- start: 2021-09-24
+  end:
+  event: Case closed.
 ips: 103
 ---
 
@@ -45,12 +69,4 @@ Update N-able N-central to 2021.HF6 or higher. Check for abuse indicators, if us
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) finds zero-days and reports these directly to the affected vendors.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 05 July 2021 | Vulnerabilities discovered. |
-| 12 July 2021 | Vendor informed. |
-| 14 July 2021 | Vendor confirmed vulnerability. |
-| 27 August 2021 | 2021.1 HF6 released. |
-| 24 September 2021 | Vendor notified DIVD about the fix. |
+{% include timeline.html %}
