--- a/csirt.divd.nl/_cases/DIVD-2021-00022.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00022.md
@@ -24,6 +24,24 @@ recommendation: "
 Apply the patches released in April and Juli"
 patch_status:	 	Full patched
 -workaround:		Available
+start: 2021-08-30
+end:
+timeline:
+- start: 2021-04-13
+  end: 
+  event: CVE-2021-34473 was patched in this released, but not documented.
+- start: 2021-05-11   
+  end:
+  event: CVE-2021-31195 patched and documented
+- start: 2021-07-13   
+  end:
+  event: CVE-2021-34473 documented, CVE-2021-34523, CVE-2021-31207, and CVE-2021-31196 patched and documented 
+- start: 2021-08-30   
+  end:
+  event: First version of this case file
+- start: 2021-08-30   
+  end:
+  event: DIVD releases [scan script](https://github.com/DIVD-NL/ProxyOracleNSE) for CVE-2021-31195
 ips: 0
 ---
 ## Summary
@@ -45,15 +63,7 @@ If you are having trouble getting your Exchange server patched, we suggest that 
 
 We have made an [NSE script for ProxyOracle](https://github.com/DIVD-NL/ProxyOracleNSE) available via out GitHub account. We are going to scan internet facing Exchange servers for ProxyOracle and ProxyShell (via [Kevin beaumont's script](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange-proxyshell.nse))
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| Apr 2021 | {% cve CVE-2021-34473 %} patched, but not documented. |
-| 11 May 2021 | {% cve CVE-2021-31195 %} patched and documented |
-| 13 Jul 2021 | {% cve CVE-2021-34473 %} documented, {% cve CVE-2021-34523%}, {% cve CVE-2021-31207 %} and {% cve CVE-2021-31196 %} patched and documented  |
-| 30 Aug 2021 | First version of this case file |
-| 30 Aug 2021 | DIVD releases [scan script](https://github.com/DIVD-NL/ProxyOracleNSE) for {% cve CVE-2021-31195 %} |
+{% include timeline.html %}
 
 ## More information
 * [A New Attack Surface on MS Exchange Part 2 - ProxyOracle! by DevCore](https://devco.re/blog/2021/08/06/a-new-attack-surface-on-MS-exchange-part-2-ProxyOracle/)
