--- a/csirt.divd.nl/_cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00026.md
@@ -22,6 +22,21 @@ recommendation: "
 Upgrade to OMI version 1.13.40-0 or later and disable the OMI service"
 patch_status:	 	patch available
 -workaround:		n/a
+start: 2021-09-15
+end: 2021-11-24
+timeline:
+- start: 2021-09-14
+  end:
+  event: CVE-2021-38647 Reported by researchers from Wiz.
+- start: 2021-09-15
+  end:
+  event: DIVD CSIRT starts scanning for OMIGOD
+- start: 2021-09-16
+  end:
+  event: CVE-2021-38647 patched by Microsoft
+- start: 2021-11-24
+  end:
+  event: Casefile written and case closed
 ---
 
 ## Summary
@@ -42,14 +57,7 @@ We have tried scanning for vulnerable servers running Microsoft Open Management 
 We have discussed and confirmed these conclusions with the researchers from Wiz; nonetheless, we still think that OMIGOD is a significant security risk. It offers attackers substantial opportunity to move laterally and escalate privileges once they have compromised a host in the network. Also, companies may be running this service without their explicit knowledge, because it’s installed by default when using certain Azure services even on hosts not running inside the Azure cloud platform. Though, due to the limited internet exposure of OMI servers, we cannot work on this case any longer.
 
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| 14 Sept 2021 | {% cve cve-2021-38647 %} Reported by researchers from Wiz. |
-| 15 Sept 2021 | DIVD CSIRT starts scanning for OMIGOD |
-| 16 Sept 2021 | {% cve CVE-2021-38647 %} patched by Microsoft |
-| 24 Nov 2021 | Casefile written and case closed |
+{% include timeline.html %}
 
 ## More information
 
