--- a/csirt.divd.nl/_cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00027.md
@@ -22,6 +22,38 @@ recommendation: "
 Upgrade to 2.4.51"
 patch_status:	 	Full patched
 -workaround:		n/a
+start: 2021-10-05
+end: 2021-12-01
+timeline:
+- start: 2021-09-29
+  end:
+  event: CVE-2021-41773 reported by the ASF security team.
+- start: 2021-10-04
+  end:
+  event: CVE-2021-41773 patched and documented
+- start: 2021-10-05
+  end:
+  event: First version of this case file 
+- start: 2021-10-05
+  end:
+  event: DIVD is actively scanning for vulnerable servers.
+- start: 2021-10-06
+  end:
+  event: First round of notifications sent about 10269 vulnerable hosts
+- start: 2021-10-07
+  end:
+  event: Apache 2.51 released to mitigate {% cve CVE-2021-41773 %}
+- start: 2021-10-26
+  end:
+  event: Rescanned the internet. Second round of notifications sent about 6945 vulnerable hosts
+- start: 2021-12-01
+  end:
+  event: Based on final scan, 158 vulnerable hosts have been identified. Notifcations sent
+- start: 2021-12-01
+  end:
+  event: Case closed
+
+
 ips: 10269
 ---
 ## Summary
@@ -37,19 +69,7 @@ If you run Apache HTTP server version 2.4.49/2.4.50, downgrade to 2.4.48 or upgr
 
 We are actively scanning for vulnerable machines on the internet.
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| 29 Sept 2021 | {% cve CVE-2021-41773 %} Reported by the ASF security team. |
-| 04 Okt 2021 | {% cve CVE-2021-41773 %} patched and documented |
-| 05 Okt 2021 | First version of this case file  |
-| 05 Okt 2021 | DIVD is actively scanning for vulnerable servers. |
-| 06 Okt 2021 | First round of notifications sent about 10269 vulnerable hosts |
-| 07 Okt 2021 | Apache 2.51 released to mitigate {% cve CVE-2021-41773 %} |
-| 26 Okt 2021 | Rescanned the internet. Second round of notifications sent about 6945 vulnerable hosts |
-| 1 Dec 2021 | Based on final scan, 158 vulnerable hosts have been identified. Notifcations sent |
-| 1 Dec 2021 | Case closed |
+{% include timeline.html %}
 
 ![Graph showing vulnerable hosts over time](/assets/images/apache-2.4.49-2.4.50.png)
 
