--- a/csirt.divd.nl/_cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00036.md
@@ -19,6 +19,24 @@ recommendation: "
 Upgrade VMware vCenter Server and VMware Cloud Foundation to the latest version"
 patch_status:	 	Full patched
 -workaround:		n/a
+start: 2021-12-03
+end:
+timeline:
+- start: 2021-11-23
+  end:
+  event: VMware publishes their security advisory and releases a patch.
+- start: 2021-11-24
+  end:
+  event: US Cybersecurity and Infrastructure Security Agency publishes a security advisory.
+- start: 2021-12-03
+  end:
+  event: Proof of Concept code becomes publicly available.
+- start: 2021-12-03
+  end:
+  event: DIVD starts scanning the internet for CVE-2021-21980.
+- start: 2021-12-05
+  end:
+  event: DIVD CSIRT sends mail to owners of vulnerable systems that were found.
 ---
 ## Summary
 
@@ -32,15 +50,7 @@ If you run VMware vCenter Server with version 6.5 or 6.7, or Cloud Foundation (v
 
 We are scanning the internet for vulnerable servers, and will notify system owners via the listed abuse contacts.
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| 23-11-2021 | VMware publishes their security advisory and releases a patch. |
-| 24-11-2021 | US Cybersecurity and Infrastructure Security Agency publishes a security advisory. |
-| 03-12-2021 | Proof of Concept code becomes publicly available. |
-| 03-12-2021 | DIVD starts scanning the internet for CVE-2021-21980. |
-| 05-12-2021 | DIVD CSIRT sends mail to owners of vulnerable systems that were found. |
+{% include timeline.html %}
 
 ## More information
 * [VMware  Security Advisory](https://www.vmware.com/security/advisories/VMSA-2021-0027.html)
