--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -65,9 +65,7 @@ If you run Apache with version less then 2.0 or Apache and/or log4j2 less then 2
 
 We are scanning the internet for vulnerable servers, and will notify system owners via the listed abuse contacts.
 
-{% include timeline_table.html %}
-
-{% include timeline_gantt.html %}
+{% include timeline.html %}
 
 
 ## More information
