--- a/csirt.divd.nl/_cases/DIVD-2021-00039.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00039.md
@@ -20,6 +20,25 @@ versions: iLO4 and earlier versions used on HP servers.
 recommendation: "Update the iLO firmware version to the latest official release from HP"
 patch_status:  n/a
 -workaround: n/a
+start: 2021-12-31
+end:
+timeline:
+- start: 2021-12-28
+  end:
+  event:  AmnPardaz reported about the vulnerability.
+- start: 2021-12-31
+  end:
+  event:  DIVD starts OSINT research.
+- start: 2022-01-01
+  end:
+  event:  DIVD starts scanning the internet for open iLO instances.
+- start: 2022-01-02
+  end:
+  event:  DIVD starts with identifying owners.
+- start: 2022-01-07
+  end:
+  event:  DIVD sent out a first batch of notifications.
+
 ---
 ## Summary
 
@@ -45,16 +64,7 @@ Use defense-in-depth strategies to reduce risk and detect intrusions before reac
 
 We are scanning the internet for vulnerable servers, and will notify system owners via the listed abuse contacts.
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| 28-12-2021 | AmnPardaz reported about the vulnerability. |
-| 31-12-2021 | DIVD starts OSINT research. |
-| 01-01-2022 | DIVD starts scanning the internet for open iLO instances. |
-| 02-01-2022 | DIVD starts with identifying owners. |
-| 07-01-2022 | DIVD sent out a first batch of notifications. |
-
+{% include timeline.html %}
 
 ## More information
 * [Padvish Threats Database](https://threats.amnpardaz.com/en/2021/12/28/implant-arm-ilobleed-a/)
