--- a/csirt.divd.nl/_cases/DIVD-2021-00005.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00005.md
@@ -29,6 +29,43 @@ The solution for these vulnerabilities is to upgrade the Pulse Connect Secure se
 "
 -patch_status:	 	Available
 -workaround:		Available
+start:  2021-04-21
+end:    2021-08-01
+timeline:
+- start : 2021-04-20
+  end: 
+  event: Pulse Secure (Ivanti) publishes an advisory with a temporary measure(workaround). 
+- start : 2021-04-20
+  end: 
+  event: FireEye publishes a blog with in-depth technical details. 
+- start : 2021-04-20
+  end: 
+  event: NCSC publishes the initial version of advisory NCSC-2021-0345. 
+- start : 2021-04-21
+  end: 
+  event: DIVD starts an assessment 
+- start : 2021-04-21
+  end: 
+  event: At request, DIVD shares an (unevaluated) list of ~650 Netherlands-linked PCS systems that lack the temporary measure with the Dutch CERT community. 
+- start : 2021-05-03
+  end: 
+  event: Pulse Secure (Ivanti) releases a new version of PCS to all PCS customers. 
+- start : 2021-05-10
+  end: 
+  event: DIVD sends first notifications about systems that run a PCS system without the workaround present while running a PCS version that is vulnerable according to the vendor’s advisory.
+- start : 2021-06-06
+  end: 
+  event: Second round of notifications sent by DIVD CSIRT. 
+- start : 2021-06-16
+  end: 
+  event: DIVD shares data with DTC so they can reach out to owners of systems that are still vulnerable. 
+- start : 2021-07-15
+  end: 
+  event: DIVD shares data about the last few vulnerable systems with a reseller of Pulse software in the Netherlands, in the hope that they can reach a few of the people responsible. 
+- start : 2021-08-01
+  end: 
+  event: Case closed. After 4 attempts to reach system owners via various channels we exhausted our means to remediate this further. 
+
 ips: 89
 ---
 <p>
@@ -82,16 +119,18 @@ Het is aannemelijk dat er een (beperkt aantal) PCS-systemen zijn die buiten het 
 | 15-07-2021 | DIVD deelt data over laatste nog kwetsbare systemen met een reseller van Pulse software in Nederland in de hoop dat zij nog een aantal achterblijvers kunnen bereiken. |
 | 01-08-2021 | Case gesloten. Na 4 notificatie pogingen via verschillende kanalen kunnen wij hier verder niet veel meer doen. |
 
+{% include timeline_gantt.html %}
+
 ## Dankwoord
 DIVD is Fox IT / NCC Group zeer dankbaar voor de hulp die ze hebben geboden bij de versiedetectie. Zonder hun hulp had DIVD voor (vele) tientallen systemen geen gerichte notificatie kunnen sturen.
 
 ## Referenties
-[0] https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/  
-[1] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
-[2] https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345  
-[3] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
-[4] https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/  
-[5] https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devices
+- [0] [https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/](https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/)
+- [1] [https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html](https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html)
+- [2] [https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345](https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345)
+- [3] [https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html](https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html)
+- [4] [https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/](https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/)
+- [5] [https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devic](https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devic)
 
 <hr>
 
@@ -128,29 +167,16 @@ If the system returned a 40x-status code, it was concluded that the workaround w
 
 It is likely that a (limited) number of Netherlands-linked PCS systems were not included in our daily scans, because we limited our effort to PCS systems that could be found in Shodan and/or BinaryEdge on 21 April. In some cases, DIVD performs wider scans, which yields a higher degree of completeness. But in absence of public Proof of Concept (PoC) exploit code, we decided for reasons of proportionality and necessity to focus on the set of systems that could be found in Shodan and/or BinaryEdge..
 
-## Timeline
 
-| Date | Description |
-|:-----:|-------------|
-| 20-04-2021 | Pulse Secure (Ivanti) publishes an advisory with a temporary measure(workaround). |
-| 20-04-2021 | FireEye publishes a blog with in-depth technical details. |
-| 20-04-2021 | NCSC publishes the initial version of advisory NCSC-2021-0345. |
-| 21-04-2021 | DIVD starts an assessment |
-| 21-04-2021 | At request, DIVD shares an (unevaluated) list of ~650 Netherlands-linked PCS systems that lack the temporary measure with the Dutch CERT community. |
-| 03-05-2021 | Pulse Secure (Ivanti) releases a new version of PCS to all PCS customers. |
-| 10-05-2021 | DIVD sends first notifications about systems that run a PCS system without the workaround present while running a PCS version that is vulnerable according to the vendor’s advisory.|
-| 06-06-2021 | Second round of notifications sent by DIVD CSIRT. |
-| 16-06-2021 | DIVD shares data with DTC so they can reach out to owners of systems that are still vulnerable. |
-| 15-07-2021 | DIVD shares data about the last few vulnerable systems with a reseller of Pulse software in the Netherlands, in the hope that they can reach a few of the people responsible. |
-| 01-08-2021 | Case closed. After 4 attempts to reach system owners via various channels we exhausted our means to remediate this further. |
+{% include timeline.html %}
 
 ## Acknowledgements
 DIVD is very grateful to Fox IT / NCC Group for their assistence in version detection. Withouth their help, DIVD could not have sent out targeted notifications..
 
 ## References
-[0] https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/  
-[1] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
-[2] https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345  
-[3] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
-[4] https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/  
-[5] https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devices
+- [0] [https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/](https://kb.pulsesecure.net/articles/Pulse_Secure_Article/SA44784/)
+- [1] [https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html](https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html)
+- [2] [https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345](https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345)
+- [3] [https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html](https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html)
+- [4] [https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/](https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/)
+- [5] [https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devic](https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devic)
