--- a/csirt.divd.nl/_cases/DIVD-2021-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00007.md
@@ -19,6 +19,28 @@ recommendation: "
 Update Origin client to the latest version.
 "
 patch_status:         "XSS and RCE patched, Angular template injection still present"
+start: 2021-04-21
+end:   2021-07-13
+timeline:
+- start: 2021-04-21
+  end: 
+  event: Vulnerabilities discovered.
+- start: 2021-04-21
+  end: 
+  event: Vendor informed.
+- start: 2021-04-21
+  end:   2021-05-11
+  event: Time to Confirm vulnerability. 
+- start: 2021-05-11
+  end: 
+  event: Vendor confirmed vulnerability.
+- start: 2021-04-21
+  end:   2021-07-13
+  event: Time to fix. 
+- start: 2021-07-13
+  end: 
+  event: Notified by the vendor that XSS and RCE have been fixed. 
+
 ips: 0
 ---
 
@@ -55,11 +77,5 @@ Update Origin client to the latest version and don't click any suspicious Origin
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) finds zero-days and reports these directly to the affected vendors.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 21 April 2021 | Vulnerabilities discovered. |
-| 21 April 2021 | Vendor informed. |
-| 11 May 2021 | Vendor confirmed vulnerability. |
-| 13 July 2021 | Notified by the vendor that XSS and RCE have been fixed.  |
+{% include timeline.html %}
