--- a/csirt.divd.nl/_cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00030.md
@@ -21,6 +21,39 @@ recommendation: "
 Upgrade to 13.8.8, 13.9.6, and 13.10.3"
 patch_status:	 	Full patched
 -workaround:		n/a
+start: 2021-11-01
+end:
+timeline:
+- start: 2021-04-14
+  end:
+  event: CVE-2021-22205 Reported by the Gitlab team.
+- start: 2021-10-29
+  end:
+  event: POC released on Gitlab 
+- start: 2021-11-09
+  end:
+  event: DIVD got a list of vulnerable gitlab servers, from security researchers at [Censys](https://censys.io)
+- start: 2021-11-11
+  end:
+  event: First version of this case file 
+- start: 2021-11-13
+  end:
+  event: Validating the received data
+- start: 2021-11-15
+  end:
+  event: First notifications sent out
+- start: 2021-11-23
+  end:
+  event: DIVD got a second list with vulnerable gitlab servers
+- start: 2021-11-23
+  end:
+  event: Validating the second received data
+- start: 2021-11-24
+  end:
+  event: DIVD sent out a second batch of notifications
+- start: 2021-11-27
+  end:
+  event: DIVD has released an NMAP script to test for this vulnerability on its [GitHub](https://github.com/DIVD-NL/GitLab-cve-2021-22205-nse)
 ips: 0
 ---
 ## Summary
@@ -35,20 +68,7 @@ If you run GitLab CE/EE version starting from 11.9, upgrade to the latest versio
 
 We are processing the list of vulnerable gitlab servers. We have sent the first notifications by email. 
 
-## Timeline
-
-| Date | Description |
-|:-----:|-------------|
-| 14 Apr 2021 | {CVE-2021-22205} Reported by the Gitlab team. |
-| 29 Okt 2021 | POC released on Gitlab  |
-| 09 Nov 2021 | DIVD got a list of vulnerable gitlab servers, from security researchers at [Censys](https://censys.io) |
-| 11 Nov 2021 | First version of this case file  |
-| 13 Nov 2021 | Validating the received data |
-| 15 Nov 2021 | First notifications sent out |
-| 23 Nov 2021 | DIVD got a second list with vulnerable gitlab servers |
-| 23 Nov 2021 | Validating the second received data |
-| 24 Nov 2021 | DIVD sent out a second batch of notifications |
-| 27 Nov 2021 | DIVD has released an NMAP script to test for this vulnerability on its [GitHub](https://github.com/DIVD-NL/GitLab-cve-2021-22205-nse) |
+{% include timeline.html %}
 
 ## More information
 * [GitLab Critical Security Release: 13.10.3, 13.9.6, and 13.8.8](https://about.gitlab.com/releases/2021/04/14/security-release-gitlab-13-10-3-released/#Remote-code-execution-when-uploading-specially-crafted-image-files)
